...

                </FrameLayout>

            </FrameLayout>

            <EditText
                android:id="@+id/tour_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:padding="5dp"
                android:background="#EEEEEE"
...
                    android:text="Location:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:id="@+id/tour_location_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EEEEEE"
                    android:padding="5dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="20sp"
...
                    android:text="Cost:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:id="@+id/tour_cost_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="24dp"
                    android:padding="5dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
...
                    android:text="Start Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/tour_start_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
                    android:hint="Pick Date" />
...
                    android:text="End Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/tour_end_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
                    android:hint="Pick Date"/>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/tour_attractions_srl"
                    android:layout_width="match_parent"
                    android:layout_height="255dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/tour_attractions_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="true"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"
                        android:paddingTop="10dp"
...
                    android:onClick="onToggleStar"
                    android:src="@drawable/ic_star" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/tour_buttons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
...
                    android:background="@drawable/ic_twitter"
                    android:textAllCaps="false"
                    android:textColor="#EEEEEE"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/tour_add_attraction_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.32"
                    android:background="@drawable/btn_shape_selector_primary"
                    android:enabled="true"
                    android:text="Add Attraction"
                    android:textAllCaps="false"
                    android:textColor="#EEEEEE"
                    android:textStyle="bold" />

            </LinearLayout>

...
