...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/personal_future_tours_title_btn"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:text="Future Tours"
                android:textColor="#EEEEEE"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@color/colorPrimary"
                app:drawableRightCompat="@drawable/ic_baseline_add_24"
                android:drawablePadding="10dip"
...
